# metriq-gym

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eplg.py  eplg_aws.py  eplg_ibm.py  eplg_quantinuum.py  index.html  objects.inv  pyproject.toml  qft_scores.txt  quantum_fourier_transform.paper.json  sitemap.xml  witconfig.json
.github/workflows/: dependabot-automerge.yml  docs-preview-cleanup.yml  docs-preview-deploy.yml  docs-preview.yml  docs.yml  publish-to-pypi.yml  publish-to-testpypi.yml  readthedocs_pr.yml  test.yml
benchmarks/overview/: index.html
cli/job-commands/: index.html
cli/overview/: index.html
cli/suite-commands/: index.html
dashboard/: .gitignore  DESIGN.md  index.html  server.py
development/adding-benchmarks/: index.html
development/api-reference/: index.html
development/developer-guide/: index.html
docs/: generate_cli_docs.py  hooks.py  mkdocs.yml  requirements.txt
docs/content/: index.md
docs/docs/: ecosystem.md  index.md
docs/source/: Makefile  adding_new_benchmark.rst  api.rst  cli_workflows.rst  conf.py  developer_guide.rst  end_to_end_tutorial.ipynb  index.rst  originq.rst  quickstart.rst
getting-started/metriq-platform/: index.html
getting-started/quickstart/: index.html
getting-started/tutorial/: index.html
metriq_gym/: __init__.py  circuits.py  cli.py  config.py  constants.py  exceptions.py  job_manager.py  job_type.py  metriq_metadata.py  paths.py  platform.py  provider_hooks.py  registry.py  resource_estimation.py  run.py  schema_validator.py  suite_parser.py  upload_paths.py
metriq_gym/benchmarks/: __init__.py  benchmark.py  bernstein_vazirani.py  bseq.py  cglmp.py  clops.py  eplg.py  ghz.py  lr_qaoa.py  lr_qaoa_1d.py  magic_square.py  magic_square_lccs.py  mermin.py  mirror_circuits.py  q_grade.py  qat_ole.py  qedc_benchmarks.py  qml_kernel.py  quantum_volume.py  semi_brukner.py  svetlichny.py  unoptimization.py  wit.py  wormhole.py
metriq_gym/config/: device_config.json
metriq_gym/data/: lrqaoa_1d_data.json
metriq_gym/exporters/: base_exporter.py  cli_exporter.py  dict_exporter.py  github_pr_exporter.py  json_exporter.py  metriq_client_exporter.py
metriq_gym/helpers/: graph_helpers.py  lr_qaoa_helpers.py  lrqaoa_helpers.py  qedc_helpers.py  statistics.py  task_helpers.py
metriq_gym/ibm_sampler/: __init__.py  device.py  provider.py
metriq_gym/ionq/: device.py
metriq_gym/iqm_resonance/: __init__.py  device.py  job.py  provider.py
metriq_gym/local/: __init__.py  _store.py  aer.py  device.py  job.py  provider.py
metriq_gym/origin/: __init__.py  _constants.py  constants.py  device.py  job.py  provider.py  qcloud_utils.py
metriq_gym/qem/: __init__.py  dispatch.py  pipeline.py  poll.py  registry.py  technique.py
metriq_gym/qplatform/: __init__.py  device.py  job.py
metriq_gym/quantinuum/: __init__.py  _store.py  auth.py  device.py  job.py  provider.py  utils.py
metriq_gym/schemas/: bernstein_vazirani.schema.json  bseq.schema.json  cglmp.schema.json  clops.schema.json  eplg.schema.json  ghz.schema.json  grovers.schema.json  hidden_shift.schema.json  lr_qaoa.schema.json  magic_square.schema.json  magic_square_lccs.schema.json  mermin.schema.json  mirror_circuits.schema.json  phase_estimation.schema.json  q_grade.schema.json  qat_ole.schema.json  qml_kernel.schema.json  quantum_fourier_transform.schema.json  quantum_volume.schema.json  semi_brukner.schema.json  svetlichny.schema.json  unoptimization.schema.json  wit.schema.json  wormhole.schema.json
metriq_gym/simulators/: adapters.py
metriq_gym/suites/: lr_qaoa.json  lr_qaoa_scale.json  qft_sweep.json  uf_frugal_3.json
pr-preview/pr-615/: 404.html  index.html  sitemap.xml
pr-preview/pr-643/: 404.html  index.html  sitemap.xml
pr-preview/pr-671/: 404.html  index.html  sitemap.xml
pr-preview/pr-675/: 404.html  index.html  sitemap.xml
pr-preview/pr-684/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-691/: 404.html  index.html  sitemap.xml
pr-preview/pr-692/: 404.html  index.html  sitemap.xml
pr-preview/pr-693/: 404.html  index.html  sitemap.xml
pr-preview/pr-694/: 404.html  index.html  sitemap.xml
pr-preview/pr-695/: 404.html  index.html  sitemap.xml
pr-preview/pr-698/: 404.html  index.html  sitemap.xml
pr-preview/pr-703/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-704/: 404.html  index.html  sitemap.xml
pr-preview/pr-705/: 404.html  index.html  sitemap.xml
pr-preview/pr-707/: 404.html  index.html  sitemap.xml
pr-preview/pr-710/: 404.html  index.html  sitemap.xml
pr-preview/pr-711/: 404.html  index.html  sitemap.xml
pr-preview/pr-714/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-716/: 404.html  index.html  sitemap.xml
pr-preview/pr-720/: 404.html  index.html  sitemap.xml
pr-preview/pr-725/: 404.html  index.html  sitemap.xml
pr-preview/pr-726/: 404.html  index.html  sitemap.xml
pr-preview/pr-735/: 404.html  index.html  sitemap.xml
pr-preview/pr-736/: 404.html  index.html  sitemap.xml
pr-preview/pr-738/: 404.html  index.html  sitemap.xml
pr-preview/pr-742/: 404.html  index.html  sitemap.xml
pr-preview/pr-764/: 404.html  index.html  sitemap.xml
pr-preview/pr-768/: 404.html  index.html  sitemap.xml
pr-preview/pr-770/: 404.html  index.html  sitemap.xml
pr-preview/pr-772/: 404.html  index.html  sitemap.xml
pr-preview/pr-773/: 404.html  index.html  (+1 more)
qcup.configs/: bseq.json  lr_qaoa_1d_chain.10.json  lr_qaoa_1d_chain.20.json  lr_qaoa_1d_chain.50.json  mirror_circuits.16.32.json  mirror_circuits.24.16.json  mirror_circuits.32.8.json  mirror_circuits.8.64.json  qft.json  qml_kernel.10.json  qml_kernel.20.json  qml_kernel.30.json  wit.6.json  wit.7.json
scripts/: generate_benchmark_docs.py
search/: search_index.json
tests/: conftest.py  test_cli.py  test_job_manager.py  test_quantinuum_cancel.py  test_quantinuum_counts_normalization.py  test_quantinuum_provider_import.py  test_run.py  test_run_fetch_result_qnexus_bypass_cache.py
(+906 files in other folders)
