[project]
name = "metriq-gym"
description = "Framework for implementing and running standard quantum benchmarks on different quantum devices by different providers."
authors = [
    { name = "Unitary Foundation team", email = "metriq@unitary.foundation" }
]
maintainers = [
    { name = "Alessandro Cosentino", email = "alessandro@unitary.foundation" },
    { name = "Vincent Russo", email = "vincent@unitary.foundation" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "submodules/qiskit-device-benchmarking/LICENSE",
    "submodules/QC-App-Oriented-Benchmarks/LICENSE"
]
dynamic = ["version"]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: System :: Benchmark",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "jsonschema>=4.25.1,<5.0.0",
    "pyqrack>=1.69.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.5.0,<2.13",
    "qiskit>=1.4.3,<3.0",
    "qiskit-experiments>=0.9.0,<0.14.0",
    "qiskit-aer>=0.17.1,<0.18.0",
    "qiskit-ibm-runtime>=0.41.1,<0.46.0",
    "scipy>=1.16.2,<2.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "qbraid[ionq,qiskit,braket,azure,cirq]>=0.10.0,<0.10.2",
    "ruamel-yaml-clib==0.2.15; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "ruamel-yaml-clib==0.2.15; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "myst-nb>=1.3.0,<2.0.0",
    "platformdirs>=4.4.0,<5.0.0",
    "dimod>=0.12.20,<0.13.0",
    "qnexus>=0.34.1,<1.0.0",
    "pytket-qiskit>=0.71.0,<0.77.0",
    "pyqpanda3>=0.3.2",
]

[project.scripts]
mgym = "metriq_gym.run:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest>=8.4.2,<10.0.0",
    "ruff>=0.13.2,<0.15.0",
    "sphinx>=8.2.3,<10.0.0",
    "types-tabulate>=0.9.0.20241207,<0.9.1",
    "deptry>=0.23.1,<0.25.0",
    "ipykernel>=6.30.1,<8.0.0",
    "build>=1.2.2,<2.0.0"
]

[tool.mypy]
files = ["metriq_gym"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
exclude = ["submodules"]
line-length = 100

[tool.deptry]
exclude = ["submodules"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "e2e: marks end-to-end test of the CLI workflow",
]

[build-system]
requires = [
    "setuptools>=69.0",
    "setuptools_scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = [
    ".",
    "submodules/QC-App-Oriented-Benchmarks",
    "submodules/qiskit-device-benchmarking"
]
include = [
    "metriq_gym*",
    "qiskit_device_benchmarking*",
    "_common*",
    "bernstein_vazirani*",
    "phase_estimation*",
    "hidden_shift*",
    "quantum_fourier_transform*"
]

[tool.setuptools.package-data]
metriq_gym = ["schemas/*.json"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "metriq_gym/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
fallback_version = "0.0.0"

[project.entry-points."qbraid.providers"]
local = "metriq_gym.local.provider:LocalProvider"
quantinuum = "metriq_gym.quantinuum.provider:QuantinuumProvider"
origin = "metriq_gym.origin.provider:OriginProvider"

[project.entry-points."qbraid.jobs"]
local = "metriq_gym.local.job:LocalAerJob"
quantinuum = "metriq_gym.quantinuum.job:QuantinuumJob"
origin = "metriq_gym.origin.job:OriginJob"
