[project]
name = "metriq-gym"
description = "Framework for implementing and running standard quantum benchmarks on different quantum devices by different providers."
authors = [
    { name = "Unitary Foundation team", email = "metriq@unitary.foundation" }
]
maintainers = [
    { name = "Alessandro Cosentino", email = "alessandro@unitary.foundation" },
    { name = "Vincent Russo", email = "vincent@unitary.foundation" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "submodules/qiskit-device-benchmarking/LICENSE",
    "submodules/QC-App-Oriented-Benchmarks/LICENSE"
]
dynamic = ["version"]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: System :: Benchmark",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "jsonschema>=4.25.1,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.5.0,<2.13",
    "numpy>=1.26.4,<3.0.0",
    "networkx>=3.6.1,<4.0.0",
    "rustworkx>=0.17.1,<0.18.0",
    "qiskit>=1.4.3,<3.0",
    "qiskit-experiments>=0.9.0,<0.14.0",
    "qiskit-aer>=0.17.1,<0.18.0",
    "qiskit-ibm-runtime>=0.41.1,<0.46.0",
    "qbraid-core>=0.1.45,<0.3.0",
    "scipy>=1.16.2,<2.0.0",
    "tabulate>=0.9.0,<0.11.0",
    "typer>=0.21.1,<1.0.0",
    "qbraid[qiskit,braket,azure,cirq]>=0.10.0,<0.11.2",
    "platformdirs>=4.4.0,<5.0.0",
    "dimod>=0.12.20,<0.13.0",
    "qnexus>=0.39.0,<1.0.0",
    "pytket-qiskit>=0.71.0,<0.78.0",
    "pyqpanda3>=0.3.2",
]

[project.scripts]
mgym = "metriq_gym.run:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest>=8.4.2,<10.0.0",
    "ruff>=0.13.2,<0.16.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "types-tabulate>=0.9.0.20241207,<0.10.1",
    "deptry>=0.23.1,<0.25.0",
    "ipykernel>=6.30.1,<8.0.0",
    "build>=1.2.2,<2.0.0"
]

[tool.mypy]
files = ["metriq_gym"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
exclude = ["submodules"]
line-length = 100

[tool.deptry]
extend_exclude = ["submodules", ".poetry"]
known_first_party = ["_common"]
pep621_dev_dependency_groups = ["docs"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "e2e: marks end-to-end test of the CLI workflow",
]

[build-system]
requires = [
    "setuptools>=69.0",
    "setuptools_scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = [
    ".",
    "submodules/QC-App-Oriented-Benchmarks",
    "submodules/qiskit-device-benchmarking"
]
include = [
    "metriq_gym*",
    "qiskit_device_benchmarking*",
    "_common*",
    "bernstein_vazirani*",
    "phase_estimation*",
    "hidden_shift*",
    "quantum_fourier_transform*"
]

[tool.setuptools.package-data]
metriq_gym = ["schemas/*.json"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "metriq_gym/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
fallback_version = "0.0.0"

[project.entry-points."qbraid.providers"]
local = "metriq_gym.local.provider:LocalProvider"
quantinuum = "metriq_gym.quantinuum.provider:QuantinuumProvider"
origin = "metriq_gym.origin.provider:OriginProvider"

[project.entry-points."qbraid.jobs"]
local = "metriq_gym.local.job:LocalAerJob"
quantinuum = "metriq_gym.quantinuum.job:QuantinuumJob"
origin = "metriq_gym.origin.job:OriginJob"
